Update sonarqube-server.yml for Azure Pipelines

--- a/sonarqube-server.yml
+++ b/sonarqube-server.yml
@@ -36,8 +36,19 @@ steps:
       # sonar.exclusions=**/*.bin
       sonar.verbose=true
 
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'restore'
+    projects: 'project.sln' # Adjust this pattern to match your project file
+    workingDirectory: .
+  # Command Line task to run your build.
+
 # Dotnet build task
 - task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
+    projects: 'project.sln'
+    workingDirectory: .
   displayName: 'dotnet build'
 
 # Run Code Analysis task
