Update sonarqube-server.yml for Azure Pipelines

--- a/sonarqube-server.yml
+++ b/sonarqube-server.yml
@@ -31,6 +31,12 @@ steps:
       # sonar.exclusions=**/*.bin
       sonar.verbose=true
 
+- task: NuGetToolInstaller@1
+
+- task: NuGetCommand@2
+  inputs:
+    restoreSolution: 'CSharpProject/SomeConsoleApplication.sln'
+
 - task: DotNetCoreCLI@2
   inputs:
     command: 'restore'
