--- a/CSharpProject/SomeConsoleApplicationTest/SomeConsoleApplicationTest.csproj
+++ b/CSharpProject/SomeConsoleApplicationTest/SomeConsoleApplicationTest.csproj
@@ -60,6 +60,10 @@
       <Name>SomeConsoleApplication</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+  <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
+  <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
