--- a/sonarqube-server.yml
+++ b/sonarqube-server.yml
@@ -30,7 +30,7 @@ stages:
         SonarQube: 'SonarQube Server-dotnet-example'
         scannerMode: 'dotnet'
         projectKey: 'onboarding-examples_dotnet-example'
-        projectName: 'onboarding-examples_dotnet-example'
+        projectName: 'Onboarding Example - AzureDevOps - DotNet Example'
         extraProperties: |
           # Additional properties that will be passed to the scanner, 
           # Put one key=value per line, example:
